--- a/фронт/style.css
+++ b/фронт/style.css
@@ -271,4 +271,317 @@ h1, h2, h3, h4, h5, h6{
 
     transition: opacity .2s linear;
 }
+.box{
+    width: 400px;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: var(--first-color);
+    text-align: center;
+    border-radius: 24px;
+    
+}
+
+.box_title{
+    color: #fff;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.box_input{
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid var(--second-color);
+    padding: 14px, 10px;
+    width: 200px;
+    height: 40px;
+    outline: none;
+    color: #fff;
+    border-radius: 24px;
+    transition: .25s;
+}
+
+.box_input:focus{
+    width: 280px;
+    background-color: var(--second-color);
+    color: #242424;
+}
+
+.box_button{
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid var(--second-color);
+    padding: 14px, 40px;
+    width: 100px;
+    height: 40px;
+    outline: none;
+    color: #fff;
+    border-radius: 24px;
+    transition: .25s;
+    cursor: pointer;
+}
+
+.box_button:hover{
+    background-color: var(--second-color);
+    color: #242424;
+}
+
+
+.box_link{
+    display: inline-block;
+    color: #fff;
+    transition: color .2s linear;
+    text-decoration: none;
+    
+}
+
+.box_link:hover{
+    color: var(--second-color);
+}
+
+/* {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 15px;
+    position: relative;
+    
+    color: var(--first-color);
+    text-decoration: none;
+
+    transition: color .2s linear;
+}*/
+
+.box_link:after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 3px;
+    display: none;
+
+    background-color: var(--second-color);
+    display: none;}
+    /* opacity: 0; */
+
+    /* position: absolute;
+    top: 100%;
+    left: 0;
+    z-index: 1; */ 
+
+    /* transition opacity: .2s linear; */
+/* }
+
+.box_link:hover{
+    color: var(--background-color);
+}*/
+
+.box_link:hover:after{
+    display: block;
+    /* opacity: 1; */
+
+ } 
+
+
+ main{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+/* кружочек */
+.circle{
+    position: absolute;
+    z-index: 1;
+    
+    border-radius: 50%;
+    background: var(--second-color);
+    box-shadow: 0px 4px 70px 6px rgba(217, 299, 255, 0.25);
+
+    animation-name: fadeCircle;
+    animation-duration: .7s;
+    animation-timing-function: ease-in-out;
+    animation-delay: .5s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+/* появление круга */
+@keyframes fadeCircle {
+    0%{
+        width: 2534px;
+        height: 2543px;
+    }    
+    25%{
+        width: 2000px;
+        height: 2000px;
+    }  
+    50%{
+        width: 1500px;
+        height: 1500px;
+    }  
+    75%{
+        width: 1000px;
+        height: 1000px;
+    }  
+    100%{
+        width: 534px;
+        height: 543px;
+    }  
+}
+
+/* контенер */
+.reg_container{
+    opacity: 0;
+    position: relative;
+    z-index: 2;
+    max-width: 415px;
+    width: 100%;
+    background-color: #9773ff;
+    border-radius: 24px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 38px;
+    padding-bottom: 38px;
+
+    animation-name: fadeForm;
+    animation-duration: .7s;
+    animation-timing-function: ease-in-out;
+    animation-delay: 1.4s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+}
+
+/* появление */
+@keyframes fadeForm {
+    0%{
+        opacity: 0;
+    }    
+    25%{
+        opacity: .25;
+    }  
+    50%{
+        opacity: .5;
+    }  
+    75%{
+        opacity: .75;
+    }  
+    100%{
+        opacity: 1;
+    }  
+}
+
+/* заголовок */
+.reg_title{
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    margin-bottom: 20px;
+    text-align: center;
+    text-transform: uppercase;
+
+}
+
+/* .reg_fields{
+
+} */
+
+/* поле */
+.field{
+    margin-bottom: 13px;
+}
+
+/* ввод */
+.reg_field_input{
+    background: none;
+    display: block;
+    margin: 20px auto;
+    text-align: center;
+    border: 2px solid var(--second-color);
+    padding: 14px, 10px;
+    width: 325px;
+    height: 45px;
+    outline: none;
+    color: #fff;
+    border-radius: 24px;
+    transition: .25s;
+}
+
+/* ввод в фокусе */
+.reg_field_input:focus{
+    width: 100%;
+    background-color: var(--second-color);
+    color: #242424;
+}
+
+/* .reg_buttons{
+
+} */
+
+
+/* кнопка */
+.butt{
+    background: none;
+    display: block;
+    margin: 20px auto;
+    height: 45px;
+    width: 325px;
+    border: 2px solid var(--second-color);
+    color: #fff;
+    border-radius: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 45px;
+    transition: .25s;
+    cursor: pointer;
+}
+
+/* наведение на кнопку */
+.butt:hover{
+    text-decoration: none;
+    background-color: var(--second-color);
+    color: #242424;
+}
+
+/* кнопка регистрации через гугл */
+.butt_google{
+    background: #bfa1ff;
+    display: block;
+    height: 45px;
+    width: 100%;
+    border: 2px solid var(--second-color);
+    color: #fff;
+    border-radius: 24px;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 45px;
+    transition: .25s;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+/* наведение на кнопку */
+.butt_google:hover{
+    text-decoration: none;
+    background-color: var(--second-color);
+    color: #242424;
+}
+
+/* пространство между кнопками */
+.divider{
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 14px;
+    color: #fff;
+    text-align: center;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
 
