не понятно что, но что-то сделала, сохраняю перед миграцией

--- a/blog/public/assets/css/style.css
+++ b/blog/public/assets/css/style.css
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #007bff;
+  --primary: #B197FC;
   --secondary: #d0c2af;
   --success: #2e937a;
   --info: #17a2b8;
